# validator-exit-bot

./: .coveragerc  .dockerignore  Dockerfile  METRICS.md  Makefile  README.md  ape-config.yaml  docker-compose.yml  env.example  fetch_key_indices.py  pyproject.toml  pytest.ini  run.sh
.github/workflows/: ci-dev.yml  ci-prod.yml  ci-staging.yml  tests-and-checks.yml
docs/: EASY_TRACK_DOCKER_GUIDE.md
interfaces/: LidoLocator.json  NodeOperatorRegistry.json  StakingRouter.json  ValidatorExitBusOracle.json  WithdrawalVault.json
scripts/: __init__.py  encode_exit_requests.py  exit_request.py  generate.py  generate_et_hash_submit.py  generate_veb_data_reveal.py  kapi_client.py
src/: __init__.py  health_server.py  main.py  trigger_exit_bot.py  variables.py
src/blockchain/: constants.py  typings.py
src/blockchain/contracts/: base_interface.py  lido_locator.py  node_operator_registry.py  staking_router.py  validator_exit_bus_oracle.py  withdrawal_vault.py
src/blockchain/web3_extentions/: lido_contracts.py  transaction.py
src/metrics/: __init__.py  metrics.py
src/utils/: cl_client.py  exit_data_decoder.py  exit_request.py  types.py
tests/: README.md  __init__.py  test_exit_data_decoding.py  test_trigger_exit_bot.py
tests/scripts/: __init__.py  test_scripts_encode_exit_requests.py  test_scripts_exit_request.py  test_scripts_generate.py  test_scripts_kapi_client.py
utils/: cl_client.py  encode_exit_requests.py  exit_request.py  kapi_client.py  types.py
