[tool.poetry]
package-mode = false
name = "validator-exit-bot"
version = "0.1.0"
description = ""
authors = ["F4ever <raman.s@lido.fi>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4"
prometheus-client = "0.21.1"
web3-multi-provider = { version = "^2.2.0", extras = ["metrics"] }
web3 = "^7.0.0"
structlog = "^24.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
